Agreagado de enlaces a tablas y form

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <h1>Listas y enlaces</h1>
         <ol>
             <li>Elemento 1 <a href="https://www.youtube.com/watch?v=ybxkrNalO0s" target="_blank"> ir a un album de musica</a></li>
-            <li>Elemento 2</li>
-            <li>Elemento 3</li>
+            <li>Elemento 2 <a href="table.html"> Tablas</a></li> 
+            <li>Elemento 3 <a href="formulario.html">Formulario</a></li> 
             <li>Elemento 4</li>
         </ol>
         <ul>
